Working on settings, api is complete
