# lib/api/settings.ts
@@ -1,9 +1,10 @@
 import { Request, Response } from "express";
-import { Ok, handleException } from "../web/response";
+import { Forbidden, NoContent, Ok, handleException } from "../web/response";
 import { validateToken } from "./auth";
-import { findUser } from "../database/user";
-import { getBoolean, getObject, getOrUndefined } from "../validation/type-validation";
-import { getBase64EncodedImage, getEmail, getSettings as getSettingsSV, getStatus, getTfaKey, getTokenDuration, getUsername } from "../validation/semantic-validation";
+import { findUser, findUserTokenAndPasswordHash, updateUserPassword, updateUserPfp, updateUserSettings, updateUserTfaKey } from "../database/user";
+import { getNonEmptyString, getObject, getOrNull, getOrUndefined } from "../validation/type-validation";
+import { getBase64EncodedImage, getEmail, getSettings as getSettings_SemanticValidation, getSixDigitCode, getStatus, getTfaKey, getTokenDuration, getUsername } from "../validation/semantic-validation";
+import bcrypt from "bcrypt";
 
 export async function getSettings(req: Request, res: Response): Promise<void> {
     try {
@@ -25,16 +26,27 @@ export async function getSettings(req: Request, res: Response): Promise<void> {
 
 export async function patchSettings(req: Request, res: Response): Promise<void> {
     try {
+        const partialUser = await validateToken(req, findUserTokenAndPasswordHash);
         const body = getObject(req.body);
         const username = getUsername(body.username);
         const email = getEmail(body.email);
         const status = getStatus(body.status);
-        const settings = getSettingsSV(body.settings);
+        const settings = getSettings_SemanticValidation(body.settings);
+        const password = getOrUndefined(body.password, getNonEmptyString);
+        const oldPassword = getNonEmptyString(body.oldPassword);
+        if(!bcrypt.compareSync(oldPassword, partialUser.passwordHash))
+            throw new Forbidden();
         const pfp = getOrUndefined(body.pfp, getBase64EncodedImage);
         const tokenDuration = getTokenDuration(body.tokenDuration);
-        const tfa = getBoolean(body.tfa);
-        const tfaKey = getOrUndefined(body.tfaKey, getTfaKey);
-        //TODO: finish patch
+        const tfaKey = getOrUndefined(body.tfaKey, (raw: any) => { return getOrNull(raw, getTfaKey); });
+        await updateUserSettings(partialUser.id, username, email, status, settings, tokenDuration);
+        if(password != undefined)
+            await updateUserPassword(partialUser.id, password);
+        if(pfp != undefined)
+            await updateUserPfp(partialUser.id, pfp);
+        if(tfaKey !== undefined)
+            await updateUserTfaKey(partialUser.id, tfaKey);
+        new NoContent().send(res);
     } catch(e: any) {
         handleException(e, res);
     }
